sugarcrm/themes/Sugar/css/style.css
/* ... */
.the-icons li[class^="icon-"]::after,
.the-icons li[class*=" icon-"]::after {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-style: normal;
    content: attr(class);
}
/* sprites.less reset */
[class^="icon-"],
[class*=" icon-"] {
    display: inline;
    width: auto;
    height: auto;
    line-height: inherit;
    vertical-align: baseline;
    background-image: none;
    background-position: 0% 0%;
    background-repeat: repeat;
}
li[class^="icon-"],
li[class*=" icon-"] {
    display: block;
}
/*  Font Awesome styles
    ------------------------------------------------------- */
[class^="icon-"]:before,
[class*=" icon-"]:before {
    font-family: FontAwesome;
    font-weight: normal;
    font-style: normal;
    display: inline-block;
    text-decoration: inherit;
    -webkit-font-smoothing: antialiased;
}
a [class^="icon-"],
a [class*=" icon-"] {
    display: inline-block;
    text-decoration: inherit;
}
/* makes the font 33% larger relative to the icon container */
.icon-large:before {
    vertical-align: top;
    font-size: 1.3333333333333333em;
}
/* makes the font 16px */
.icon-sm:before {
    vertical-align: top;
    font-size: 16px;
}
/* makes the font 26px */
.icon-md:before {
    vertical-align: top;
    font-size: 26px;
}
/* makes the font 42px */
.icon-lg:before {
    vertical-align: top;
    font-size: 42px;
}
/* makes the font 68px */
.icon-xl:before {
    vertical-align: top;
    font-size: 68px;
}
.btn [class^="icon-"],
.btn [class*=" icon-"] {
    /* keeps button heights with and without icons the same */

    line-height: .9em;
}
li [class^="icon-"],
li [class*=" icon-"] {
    display: inline-block;
}
li .icon-large[class^="icon-"],
li .icon-large[class*=" icon-"] {
    /* 1.5 increased font size for icon-large * 1.25 width */

    width: 1.875em;
}
li[class^="icon-"],
li[class*=" icon-"] {
    margin-left: 0;
    list-style-type: none;
}
li[class^="icon-"]:before,
li[class*=" icon-"]:before {
    text-indent: -2em;
    text-align: center;
}
li[class^="icon-"].icon-large:before,
li[class*=" icon-"].icon-large:before {
    text-indent: -1.3333333333333333em;
}
/*  Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
    readers do not read off random characters that represent icons */
.icon-glass:before {
    content: "\f000";
}
.icon-music:before {
    content: "\f001";
}
.icon-search:before {
    content: "\f002";
}
.icon-envelope:before {
    content: "\f003";
}
.icon-heart:before {
    content: "\f004";
}
.icon-star:before {
    content: "\f005";
}
.icon-star-empty:before {
    content: "\f006";
}
.icon-user:before {
    content: "\f007";
}
.icon-film:before {
    content: "\f008";
}
.icon-th-large:before {
    content: "\f009";
}
.icon-th:before {
    content: "\f00a";
}
.icon-th-list:before {
    content: "\f00b";
}
.icon-ok:before {
    content: "\f00c";
}
.icon-remove:before {
    content: "\f00d";
}
.icon-zoom-in:before {
    content: "\f00e";
}
.icon-zoom-out:before {
    content: "\f010";
}
.icon-off:before {
    content: "\f011";
}
.icon-signal:before {
    content: "\f012";
}
.icon-cog:before {
    content: "\f013";
}
.icon-trash:before {
    content: "\f014";
}
.icon-home:before {
    content: "\f015";
}
.icon-file:before {
    content: "\f016";
}
.icon-time:before {
    content: "\f017";
}
.icon-road:before {
    content: "\f018";
}
.icon-download-alt:before {
    content: "\f019";
}
.icon-download:before {
    content: "\f01a";
}
.icon-upload:before {
    content: "\f01b";
}
.icon-inbox:before {
    content: "\f01c";
}
.icon-play-circle:before {
    content: "\f01d";
}
.icon-repeat:before {
    content: "\f01e";
}
/* \f020 is not a valid unicode character. all shifted one down */
.icon-refresh:before {
    content: "\f021";
}
.icon-list-alt:before {
    content: "\f022";
}
.icon-lock:before {
    content: "\f023";
}
.icon-flag:before {
    content: "\f024";
}
.icon-headphones:before {
    content: "\f025";
}
.icon-volume-off:before {
    content: "\f026";
}
.icon-volume-down:before {
    content: "\f027";
}
.icon-volume-up:before {
    content: "\f028";
}
.icon-qrcode:before {
    content: "\f029";
}
.icon-barcode:before {
    content: "\f02a";
}
.icon-tag:before {
    content: "\f02b";
}
.icon-tags:before {
    content: "\f02c";
}
.icon-book:before {
    content: "\f02d";
}
.icon-bookmark:before {
    content: "\f02e";
}
.icon-print:before {
    content: "\f02f";
}
.icon-camera:before {
    content: "\f030";
}
.icon-font:before {
    content: "\f031";
}
.icon-bold:before {
    content: "\f032";
}
.icon-italic:before {
    content: "\f033";
}
.icon-text-height:before {
    content: "\f034";
}
.icon-text-width:before {
    content: "\f035";
}
.icon-align-left:before {
    content: "\f036";
}
.icon-align-center:before {
    content: "\f037";
}
.icon-align-right:before {
    content: "\f038";
}
.icon-align-justify:before {
    content: "\f039";
}
.icon-list:before {
    content: "\f03a";
}
.icon-indent-left:before {
    content: "\f03b";
}
.icon-indent-right:before {
    content: "\f03c";
}
.icon-facetime-video:before {
    content: "\f03d";
}
.icon-picture:before {
    content: "\f03e";
}
.icon-pencil:before {
    content: "\f040";
}
.icon-map-marker:before {
    content: "\f041";
}
.icon-adjust:before {
    content: "\f042";
}
.icon-tint:before {
    content: "\f043";
}
.icon-edit:before {
    content: "\f044";
}
.icon-share:before {
    content: "\f045";
}
.icon-check:before {
    content: "\f046";
}
.icon-move:before {
    content: "\f047";
}
.icon-step-backward:before {
    content: "\f048";
}
.icon-fast-backward:before {
    content: "\f049";
}
.icon-backward:before {
    content: "\f04a";
}
.icon-play:before {
    content: "\f04b";
}
.icon-pause:before {
    content: "\f04c";
}
.icon-stop:before {
    content: "\f04d";
}
.icon-forward:before {
    content: "\f04e";
}
.icon-fast-forward:before {
    content: "\f050";
}
.icon-step-forward:before {
    content: "\f051";
}
/* ... */

